@@ -1,15 +1,16 @@
 Package: multcomp
 Title: Simultaneous Inference in General Parametric Models
-Version: 1.0-8
-Date: 2009-05-23
+Version: 1.1-0
+Date: 2009-06-03
 Author: Torsten Hothorn, Frank Bretz and Peter Westfall with
-  contributions by Richard M. Heiberger
+  contributions by Richard M. Heiberger and Andre Schuetzenmeister
 Description: Simultaneous tests and confidence intervals
   for general linear hypotheses in parametric models, including 
   linear, generalized linear, linear mixed effects, and survival models.
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
-Depends: stats, graphics, mvtnorm (>= 0.8-0)
-Suggests: lme4 (>= 0.999375-16), nlme, survival, robustbase, mboost, coin,
+Depends: stats, graphics, mvtnorm (>= 0.8-0), survival
+Suggests: lme4 (>= 0.999375-16), nlme, robustbase, mboost, coin,
   MASS, car, foreign, xtable
 LazyData: yes
 License: GPL-2
+Packaged: 2009-06-03 13:04:05 UTC; hothorn
