@@ -1,6 +1,6 @@
 
 export(glht, contrMat, univariate, adjusted, Ftest, Chisqtest, mcp, modelparm,
-       adjusted_calpha, univariate_calpha, parm, cftest)
+       adjusted_calpha, univariate_calpha, parm, cftest, cld)
 
 S3method(summary, glht)
 S3method(confint, glht)
@@ -13,6 +13,7 @@ S3method(plot, glht)
 S3method(print, contrMat)
 S3method(print, summary.glht)
 S3method(print, summary.gtest)
+S3method(print, cld)
 S3method(glht, matrix)
 S3method(glht, character)
 S3method(glht, expression)
@@ -20,3 +21,7 @@ S3method(glht, mcp)
 S3method(glht, means)
 S3method(coef, parm)
 S3method(vcov, parm)
+S3method(cld, summary.glht)
+S3method(cld, confint.glht)
+S3method(cld, glht)
+S3method(plot, cld)
