@@ -1,4 +1,10 @@
 
+
+		CHANGES in `multcomp' VERSION 1.1-0
+
+    o    new compact letter displays
+
+
 		CHANGES in `multcomp' VERSION 1.0-8
 
     o    new vignette containing supplementary material
